--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,4 +3,4 @@
 @import "fonts.scss";
 @import "scaffolding.scss";
 @import "blocks/page-header.scss";
-@import "blocks/menu-header.scss";
+@import "blocks/navigation-list.scss";
