--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,6 @@
 @import "scaffolding.scss";
 @import "blocks/page-header.scss";
 @import "blocks/navigation-list.scss";
+@import "blocks/popup.scss";
+@import "blocks/form-popup.scss";
+@import "blocks/overlay.scss";
