--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -47,6 +47,12 @@
   line-height: 19px;
 }
 
+.page-header__logo:hover {
+  opacity: 0.5;
+
+  cursor: pointer;
+}
+
 @media (max-width: $tablet-width-max) {
   .page-header__container {
     min-height: 69px;
