--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,8 +2,12 @@
 @import "variables.scss";
 @import "fonts.scss";
 @import "scaffolding.scss";
+@import "blocks/slick.scss";
 @import "blocks/page-header.scss";
+@import "blocks/page-main.scss";
 @import "blocks/navigation-list.scss";
 @import "blocks/popup.scss";
 @import "blocks/form-popup.scss";
 @import "blocks/overlay.scss";
+@import "blocks/promo-slider.scss";
+@import "blocks/list-promo.scss";
