--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -26,6 +26,12 @@
   border: 0;
   background-image: url("../img/icon-close-popup.svg");
   background-repeat: no-repeat;
+
+  &:hover {
+    opacity: 0.5;
+
+    cursor: pointer;
+  }
 }
 
 .popup-show {
