--- a/source/sass/blocks/list-promo.scss
+++ b/source/sass/blocks/list-promo.scss
@@ -31,7 +31,7 @@
   min-width: 1024px;
   max-width: 1220px;
   margin: 0 auto;
-  padding: 0 194.5px;
+  padding: 0 186.5px;
   padding-top: 100px;
 }
 
@@ -96,11 +96,135 @@
 
   position: absolute;
   top: 61px;
-  right: 313px;
+  left: 50.5%;
 
   width: 431px;
   height: 263px;
 
   background-repeat: no-repeat;
   background-image: url("../img/big-cards.png");
+}
+
+@media (max-width: $tablet-width-max) {
+  .list-promo .slick-slide {
+    min-height: 300px;
+  }
+
+  .list-promo__item-wrapper {
+    min-height: 300px;
+    min-width: $mobile-width;
+    max-width: 760px;
+    margin: 0 auto;
+    padding: 65px 82px 0;
+  }
+
+  .list-promo .slick-slide {
+    background-image: url("../img/bg-item-slider-promo-medium.png");
+  }
+
+  .list-promo .list-promo__item--bg-man {
+    background-image: url("../img/bg-man-item-slider-promo-medium.png");
+  }
+
+  .list-promo .list-promo__item--bg-girl {
+    background-image: url("../img/bg-girl-item-slider-promo-medium.png");
+  }
+
+
+  .list-promo__item--bg-cards .list-promo__item-wrapper::after {
+    top: 38px;
+    left: 46%;
+
+    width: 336px;
+    height: 206px;
+    background-image: url("../img/medium-cards.png");
+  }
+
+  .list-promo__item-title {
+    font-size: 46px;
+    line-height: 54px;
+  }
+
+  .list-promo__item-info {
+    margin-top: 7px;
+
+    font-size: 18px;
+    line-height: 21px;
+  }
+
+  .list-promo__item-scroll {
+    width: 206px;
+    min-height: 48px;
+    margin-top: 30px;
+
+    font-size: 16px;
+    line-height: 19px;
+  }
+}
+
+@media (max-width: $mobile-width-only) {
+  .list-promo .slick-slide {
+    min-height: 226px;
+  }
+
+  .list-promo__item-wrapper {
+    min-height: 226px;
+    min-width: $mobile-width;
+    max-width: 320px;
+    padding: 39px 15px 0;
+  }
+
+  .list-promo .slick-slide {
+    background-image: none;
+  }
+
+  .list-promo .list-promo__item--bg-man {
+    background-image: url("../img/bg-man-item-slider-promo-min.png");
+    background-size: 320px 226px;
+    background-position: 50% 0;
+    background-color: #e2e5ef;
+  }
+
+  .list-promo .list-promo__item--bg-man .list-promo__item-info {
+    width: 150px;
+  }
+
+  .list-promo .list-promo__item--bg-girl {
+    background-image: url("../img/bg-girl-item-slider-promo-min.png");
+    background-size: 320px 226px;
+    background-position: 50% 0;
+    background-color: #f1f7fe;
+  }
+
+
+  .list-promo__item--bg-cards .list-promo__item-wrapper::after {
+    top: 29px;
+    left: 59.5%;
+
+    width: 111px;
+    height: 156px;
+    background-image: url("../img/min-cards.png");
+  }
+
+  .list-promo__item-title {
+    font-size: 38px;
+    line-height: 45px;
+  }
+
+  .list-promo__item-info {
+    margin-top: 7px;
+
+    font-size: 16px;
+    line-height: 19px;
+  }
+
+  .list-promo__item-scroll {
+    width: 188px;
+    min-height: 43px;
+    margin-top: 25px;
+    padding-top: 14px;
+
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
