--- a/source/sass/blocks/promo-slider.scss
+++ b/source/sass/blocks/promo-slider.scss
@@ -1,32 +1,71 @@
 .promo-slider .slick-slider {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   min-height: 400px;
 }
 
 .promo-slider .slick-dots {
   display: flex;
-  margin: 0;
+  justify-content: space-between;
+  margin: 0 auto;
+  margin-top: -48px;
   padding: 0;
   width: 40px;
+  z-index: 1;
 
   list-style: none;
 }
 
 .promo-slider .slick-dots li {
   display: flex;
-  width: 10px;
-  height: 10px;
+  width: 8px;
+  height: 8px;
 
   font-size: none;
 }
 
 .promo-slider .slick-dots li button {
-  max-width: 8px;
+  width: 8px;
   height: 8px;
+  padding: 0;
 
   font-size: 0;
 
   background-color: #2028B6;
   border: none;
   border-radius: 20px;
+
+  &:hover {
+    opacity: 0.5;
+
+    cursor: pointer;
+  }
+}
+
+.promo-slider .slick-dots .slick-active button {
+  background-color: #f6f7ff;
+}
+
+@media (max-width: $tablet-width-max) {
+  .promo-slider .slick-dots {
+    margin-top: -21px;
+  }
+}
+
+@media (max-width: $mobile-width-only) {
+  .promo-slider .slick-dots {
+    margin-top: -16px;
+    width: 30px;
+  }
+
+  .promo-slider .slick-dots li {
+    width: 6px;
+    height: 6px;
+  }
+
+  .promo-slider .slick-dots li button {
+    width: 6px;
+    height: 6px;
+  }
 }
