Добавляет десктопную версию услуг

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,7 @@
 @import "blocks/overlay.scss";
 @import "blocks/promo-slider.scss";
 @import "blocks/list-promo.scss";
+@import "blocks/services.scss";
+@import "blocks/tabs-list.scss";
+@import "blocks/list-services.scss";
+@import "blocks/services-list-plus.scss";
