--- a/source/sass/blocks/services-list-plus.scss
+++ b/source/sass/blocks/services-list-plus.scss
@@ -2,6 +2,7 @@
   margin: 0;
   margin-top: 13px;
   padding: 0;
+  z-index: 1;
 
   list-style: none;
 }
@@ -29,5 +30,45 @@
 
     background-image: url("../img/icon-tick.svg");
     background-repeat: no-repeat;
+  }
+}
+
+@media (max-width: $tablet-width-max) {
+  .services-list-plus {
+    margin-top: 8px;
+  }
+
+  .services-list-plus li {
+    width: 360px;
+
+    font-size: 16px;
+
+    &::before {
+      top: 8px;
+      left: 0;
+
+      width: 11px;
+      height: 8px;
+      background-size: 11px 8px;
+    }
+  }
+}
+
+@media (max-width: $mobile-width-only) {
+  .services-list-plus {
+    margin-top: 9px;
+  }
+
+  .services-list-plus li {
+    width: 240px;
+    margin-top: 12px;
+    padding-left: 15px;
+
+    font-size: 14px;
+
+    &::before {
+      top: 5px;
+      left: -2px;
+    }
   }
 }
