--- a/source/sass/blocks/tabs-list.scss
+++ b/source/sass/blocks/tabs-list.scss
@@ -14,30 +14,6 @@
   min-height: 93px;
 }
 
-.tabs-list__item .tabs-list__button-svg {
-  position: absolute;
-  top: 29px;
-}
-
-.tabs-list__item--holding .tabs-list__button-svg {
-  left: 92px;
-}
-
-.tabs-list__item--credits .tabs-list__button-svg {
-  top: 30px;
-  left: 87px;
-}
-
-.tabs-list__item--insurance .tabs-list__button-svg {
-  top: 28px;
-  left: 73px;
-}
-
-.tabs-list__item--online-services .tabs-list__button-svg {
-  top: 28px;
-  left: 59px;
-}
-
 .tabs-list__item--active .tabs-list__button {
   background-color: #f6f7ff;
   border-radius: 4px 4px 0 0;
@@ -50,9 +26,10 @@
 }
 
 .tabs-list__button {
+  display: flex;
   width: 100%;
   height: auto;
-  padding-left: 50px;
+  padding-left: 2px;
 
   font-weight: 500;
   font-size: 18px;
@@ -66,5 +43,21 @@
     opacity: 0.5;
 
     cursor: pointer;
+  }
+}
+
+.tabs-list__wrapper {
+  display: flex;
+  margin: 0 auto;
+}
+
+.tabs-list__button span {
+  margin-left: 9px;
+  margin-top: 6px;
+}
+
+@media (max-width: $tablet-width-max) {
+  .tabs-list {
+    display: none;
   }
 }
