--- a/source/sass/blocks/list-promo.scss
+++ b/source/sass/blocks/list-promo.scss
@@ -122,8 +122,9 @@
   .list-promo__item-wrapper {
     min-height: 300px;
     min-width: $mobile-width;
-    max-width: 760px;
-    margin: 0 auto;
+    // max-width: 760px;
+    // margin: 0 auto;
+    margin: 0;
   }
 
   .list-promo__item-wrapper-text {
