--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,11 @@
 @import "blocks/tabs-list.scss";
 @import "blocks/list-services.scss";
 @import "blocks/services-list-plus.scss";
+@import "blocks/calculator.scss";
+@import "blocks/step-one.scss";
+@import "blocks/step-two.scss";
+@import "blocks/range-text.scss";
+@import "blocks/range.scss";
+@import "blocks/our-offer.scss";
+@import "blocks/list-offers.scss";
+
