--- a/source/sass/blocks/calculator.scss
+++ b/source/sass/blocks/calculator.scss
@@ -7,6 +7,7 @@
   margin: 0 auto;
   padding: 0 30px;
   padding-top: 95px;
+  min-height: 500px;
 }
 
 .calculator__title {
@@ -25,4 +26,12 @@
   display: flex;
   flex-direction: column;
   width: 51.3%;
+}
+
+.calculator__wrapper-our-offer {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-top: 57px;
+  width: 42.8%;
 }
