--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "fonts.scss";
 @import "scaffolding.scss";
 @import "blocks/slick.scss";
+@import "blocks/selectize.scss";
 @import "blocks/page-header.scss";
 @import "blocks/page-main.scss";
 @import "blocks/navigation-list.scss";
@@ -18,6 +19,7 @@
 @import "blocks/calculator.scss";
 @import "blocks/step-one.scss";
 @import "blocks/step-two.scss";
+@import "blocks/list-step-two.scss";
 @import "blocks/range-text.scss";
 @import "blocks/range.scss";
 @import "blocks/our-offer.scss";
