--- a/source/sass/blocks/our-offer.scss
+++ b/source/sass/blocks/our-offer.scss
@@ -1,10 +1,15 @@
 .our-offer {
+  display: block;
   background-color: #f6f7ff;
   border-radius: 4px;
   padding-left: 58px;
   padding-right: 36px;
   padding-top: 52px;
   min-height: 389px;
+}
+
+.our-offer--none {
+  display: none;
 }
 
 .our-offer__title {
