Добавление линии с кружочком

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,4 +24,5 @@
 @import "blocks/range.scss";
 @import "blocks/our-offer.scss";
 @import "blocks/list-offers.scss";
+@import "blocks/min-amout-credit.scss";
 
