--- a/source/sass/blocks/list-step-two.scss
+++ b/source/sass/blocks/list-step-two.scss
@@ -18,6 +18,8 @@
 }
 
 .list-step-two__item-wrapper {
+  position: relative;
+
   margin-top: 10px;
 }
 
@@ -43,4 +45,30 @@
 .list-step-two__item-input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.list-step-two__item-btn-minus {
+  position: absolute;
+  left: 24px;
+  top: 28px;
+
+  height: 1px;
+  width: 16px;
+
+  background-color: transparent;
+  background-color: #1f1e25;
+  border: none;
+}
+
+.list-step-two__item-btn-plus {
+  position: absolute;
+  right: 24px;
+  top: 21px;
+
+  height: 16px;
+  width: 16px;
+
+  background-color: transparent;
+  background-image: url("../img/icon-plus.svg");
+  border: none;
 }
