--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -2,25 +2,88 @@
   margin-top: 10px;
 }
 
-.range__line {
-  position: relative;
-
+.range input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 6.5px 0;
+}
+.range input[type=range]:focus {
+  outline: none;
+}
+.range input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 1px;
-
-  background-color: #c1c2ca;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  background: #c1c2ca;
+  border-radius: 0px;
+  border: 0px solid #000101;
 }
-
-.range__btn {
-  position: absolute;
-  top: -5px;
-
-  width: 12px;
-  height: 12px;
-
-  background-color: transparent;
-  background-color: #2c36f2;
-
-  border: none;
-  border-radius: 13px;
+.range input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 0px solid rgba(0, 0, 0, 0);
+  height: 14px;
+  width: 14px;
+  border-radius: 50px;
+  background: #2c36f2;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -6.5px;
+}
+.range input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #dfe0e4;
+}
+.range input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  background: #c1c2ca;
+  border-radius: 0px;
+  border: 0px solid #000101;
+}
+.range input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 0px solid rgba(0, 0, 0, 0);
+  height: 14px;
+  width: 14px;
+  border-radius: 50px;
+  background: #2c36f2;
+  cursor: pointer;
+}
+.range input[type=range]::-ms-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+.range input[type=range]::-ms-fill-lower {
+  background: #a3a4b0;
+  border: 0px solid #000101;
+  border-radius: 0px;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+}
+.range input[type=range]::-ms-fill-upper {
+  background: #c1c2ca;
+  border: 0px solid #000101;
+  border-radius: 0px;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+}
+.range input[type=range]::-ms-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 0px solid rgba(0, 0, 0, 0);
+  height: 14px;
+  width: 14px;
+  border-radius: 50px;
+  background: #2c36f2;
+  cursor: pointer;
+  height: 1px;
+}
+.range input[type=range]:focus::-ms-fill-lower {
+  background: #c1c2ca;
+}
+.range input[type=range]:focus::-ms-fill-upper {
+  background: #dfe0e4;
 }
