--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,4 +25,7 @@
 @import "blocks/our-offer.scss";
 @import "blocks/list-offers.scss";
 @import "blocks/min-amout-credit.scss";
-
+@import "blocks/step-three.scss";
+@import "blocks/list-info.scss";
+@import "blocks/list-info-me.scss";
+@import "blocks/thanks-section.scss";
